tests/reference/asr-test_list1-73fd538.stderr
semantic error: Type mismatch while removing from a list, found (character and integer).
 --> tests/errors/test_list1.py:6:5
  |
6 |     a.remove('error')
  |     ^^^^^^^^^^^^^^^^^ 
